--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+
 body {
-  font-family: Georgia, serif;
-  background-color: #f8f8f8;
   margin: 0;
-  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantaloupe', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(160, 239, 204);
 }
 
 #logo-image {
@@ -10,4 +14,53 @@ body {
   margin-right: 10px;
 }
 
-/* Add your own custom styles here */
+.home-container {
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+.home-container h2 {
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.home-container p {
+  color: #666;
+  margin: 10px 0;
+}
+
+.home-container .loginButton, 
+.home-container .books {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.home-container .loginButton {
+  background-color: rgb(208, 92, 237);
+}
+
+.home-container .books {
+  background-color:  #28a745;
+  color: white;
+}
+
+.home-container book:hover {
+  background-color: #1e7e34;
+}
+
+.home-container a {
+  color: #024511;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.home-container a:hover {
+  text-decoration: underline;
+}
