--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,10 @@
-
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantaloupe', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(157, 184, 168);
-}
-
-#logo-image {
-  width: 30px;
-  margin-right: 10px;
+  background-color: #aaadb0;
+  color: #333;
 }
 
 .home-container {
@@ -19,48 +12,75 @@ body {
   max-width: 800px;
   margin: 50px auto;
   text-align: center;
-  border: 2px solid black;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: none;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  margin-top: 20vh;
   border-radius: 10px;
-  background-color: #08afa1;
+  background-color: #d0cdcd;
 }
 
 .home-container h2 {
-  color: #181717;
+  color: #222;
   margin-bottom: 20px;
+  font-size: 2rem;
 }
 
 .home-container p {
-  color: #302e2e;
+  color: #555;
   margin: 10px 0;
+  font-size: 1rem;
 }
 
-.home-container .loginButton, 
+.home-container .loginButton,
 .home-container .books {
   margin: 10px;
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 12px 24px;
+  font-size: 1rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  color: #fff;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.logoutButton {
+  margin: 10px;
+  padding: 12px 24px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #c6694a;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.logoutButton:hover {
+  background-color: #c82333;
+  transform: translateY(-2px);
 }
 
 .home-container .loginButton {
-  background-color: rgb(187, 232, 50);
+  background-color: #007BFF;
+}
+
+.home-container .loginButton:hover {
+  background-color: #0056b3;
+  transform: translateY(-2px);
 }
 
 .home-container .books {
-  background-color:  #0f7226;
-  color: rgb(246, 240, 240);
+  background-color: #28A745;
 }
 
-.home-container book:hover {
-  background-color: #1e7e34;
+.home-container .books:hover {
+  background-color: #218838;
+  transform: translateY(-2px);
 }
+
 
 .home-container a {
-  color: #02360d;
+  color: #007BFF;
   text-decoration: none;
   font-weight: bold;
 }
@@ -69,11 +89,3 @@ body {
   text-decoration: underline;
 }
 
-.libraryImg {
-  display: block;
-  margin: 20px auto;
-  max-width: 90%;
-  border: 5px solid rgb(127, 123, 123);
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-}
